--- a/api/package.json
+++ b/api/package.json
@@ -62,6 +62,7 @@
 		"isomorphic-fetch": "^3.0.0",
 		"jsonwebtoken": "^8.5.1",
 		"mariadb": "^2.5.2",
+		"node-fetch": "^3.3.1",
 		"nodemailer": "^6.9.1",
 		"papaparse": "^5.1.0",
 		"sequelize": "^6.21.4",
