Some sketchy production things

--- a/doc/conf/indexcards.service
+++ b/doc/conf/indexcards.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Indexcards Tabroom API
-Documentation=https://pm2.keymetrics.io/
+Documentation=https://docs.tabroom.com/
 After=network.target
 
 [Service]
@@ -18,8 +18,8 @@ WorkingDirectory=/www/tabroom/api
 TimeoutSec=10
 
 ExecStart=/usr/bin/node /usr/bin/npm run production
-ExecReload=/usr/local/lib/node_modules/pm2/bin/pm2 reload all
-ExecStop=/usr/local/lib/node_modules/pm2/bin/pm2 kill
+ExecReload=/usr/bin/pm2 reload all
+ExecStop=/usr/bin/pm2 kill
 
 [Install]
 WantedBy=multi-user.target
