--- a/doc/conf/tabroom.com.conf
+++ b/doc/conf/tabroom.com.conf
@@ -15,11 +15,10 @@
 
 	ProxyPass / http://localhost:3000
 	ProxyPassReverse / http://localhost:3000/
-
 </VirtualHost>
 
 <VirtualHost *:80>
-	ServerName 	static.tabroom.com
+	ServerName  static.tabroom.com
 	ServerAlias static
 	ServerAdmin webmaster@tabroom.com
 	DocumentRoot /www/tabroom/web
@@ -62,6 +61,9 @@
 	DirectoryIndex index.mhtml index.html index.php
 	PerlRequire /www/tabroom/web/lib/handler.pl
 
+	Redirect /closet "https://www.tabroom.com/index/index.mhtml?closet=1"
+	Redirect /fabulous "https://www.tabroom.com/index/index.mhtml?fabulous=1"
+
 	<FilesMatch "\.mhtml$">
 		SetHandler perl-script
 		PerlHandler Tab::Mason
@@ -72,12 +74,6 @@
 	</FilesMatch>
 
 </VirtualHost>
-
-<Directory "/www/tabroom/ndt">
-	AllowOverride none
-	Options MultiViews
-	Require all granted
-</Directory>
 
 <Directory "/www/tabroom/web">
 	AllowOverride FileInfo AuthConfig Limit
