--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -11,21 +11,13 @@ on:
 env:
     CI: true
     TZ: "America/Chicago"
-    SUCCEEDED: ":white_check_mark: "
-    SLACK_ICON: ":octocat:"
-    SLACK_CHANNEL: "#tech-updates"
-    SLACK_USERNAME: "Github Actions"
-    SLACK_COLOR: "#de4e2b"
     SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-    SLACK_TITLE: ":heavy_multiplication_x:"
-    SLACK_FOOTER: "<https://github.com/${{ github.repository }}/commit/${{ github.sha }}/checks|[tabroom:master (client)]>"
-    MSG_MINIMAL: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Get node
       uses: actions/setup-node@v1
@@ -44,12 +36,10 @@ jobs:
       run: npm run test-ci
       working-directory: ./client
 
-    - name: If tests passed change SLACK_COLOR and SLACK_TITLE accordingly
+    - name: If tests passed change icon
       if: success()
-      run: |
-        echo "SLACK_COLOR=good" >> $GITHUB_ENV
-        echo "SLACK_TITLE=${{ env.SUCCEEDED }}" >> $GITHUB_ENV
+      run: echo "SLACK_ICON=:white_check_mark:" >> $GITHUB_ENV
 
     - name: Send slack notification
       if: always()
-      uses: rtCamp/action-slack-notify@v2.1.0
+      uses: speechanddebate/action-slack-notify@master
