Some fixes, start of invite conversion

--- a/api/config/config.js.sample
+++ b/api/config/config.js.sample
@@ -30,8 +30,6 @@ export const config = {
 	LDAP_PW               : 'ldapAdminPasswordHere',
 	IPLOCATION            : '/var/lib/GeoIP/GeoLite2-City.mmdb',
 	IPISP                 : '/var/lib/GeoIP/GeoIP2-ISP.mmdb',
-	S3_BUCKET			  : 's3://tabroom-files',
-	S3_URL				  : 'https://s3.amazonaws.com/tabroom-files/tourns',
 	NAUDL_USERNAME		  : 'somethingfrom@salesforce.com',
 	NAUDL_PW			  : 'askLukeHill',
 	NAUDL_TOURN_ENDPOINT  : 'tournamentServiceUrl',
@@ -39,6 +37,13 @@ export const config = {
 	NAUDL_STA_ENDPOINT    : 'staTabroomServiceUrl',
 	COOKIE_NAME           : 'TabroomToken',
 	DB_PORT               : '3306',
+	S3_URL				  : 'https://s3.amazonaws.com/tabroom-files/tourns',
+	AWS_CREDENTIALS       : {
+		accessKeyId     : '',
+		secretAccessKey : '',
+		region          : 'us-east-2',
+		Bucket          : 's3://tabroom-files',
+	},
 	DB_DATABASE           : 'tabroom',
 	sequelizeOptions      : {
 		dialect         : 'mariadb',
