--- a/api/package.json
+++ b/api/package.json
@@ -38,6 +38,7 @@
 	"homepage": "https://www.tabroom.com/about",
 	"dependencies": {
 		"@alt3/sequelize-to-json-schemas": "^0.3.55",
+		"@aws-sdk/client-s3": "^3.397.0",
 		"@maxmind/geoip2-node": "^3.2.0",
 		"@speechanddebate/nsda-js-utils": "^1.0.14",
 		"argon2": "^0.28.2",
