It'll work for now so I can test things

--- a/api/config/config.js.sample
+++ b/api/config/config.js.sample
@@ -20,6 +20,7 @@ export const config = {
 	NSDA_API_PATH         : '/v2',
 	CASELIST_KEY          : 'caselist-key',
 	SHARE_KEY             : 'share-key',
+	NSDA_KEY              : 'nsda-key',
 	SHARE_SMTP_HOST       : '192.168.37.28',
 	SHARE_SMTP_USER       : 'sharesmtp@share.tabroom.com',
 	SHARE_SMTP_PASS       : 'sharepass',
