--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,7 @@ jobs:
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
         name: nsda/tabroom
-        username: repo
+        username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
         registry: registry.speechanddebate.org
         tags: "${{ env.COMMIT_VERSION }}"
