--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,6 +32,15 @@ jobs:
         password: ${{ secrets.REGISTRY_PASSWORD }}
         registry: registry.speechanddebate.org
         tags: "${{ env.COMMIT_VERSION }}"
+
+    - name: Publish indexcards image to Registry
+      uses: elgohr/Publish-Docker-Github-Action@master
+      with:
+        name: nsda/indexcards
+        username: ${{ secrets.REGISTRY_USERNAME }}
+        password: ${{ secrets.REGISTRY_PASSWORD }}
+        registry: registry.speechanddebate.org
+        tags: "${{ env.COMMIT_VERSION }}"
     
     - name: If image was published change icon
       if: success()
