--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
 version: '3'
 services:
-    tabroom:
-        image: tabroom:latest
-        restart: always
-        ports:
-            - 8888:80
-        volumes:
-            - /www/tabroom:/www/tabroom:rw
+  tabroom:
+    image: tabroom:latest
+    restart: always
+    ports:
+        - 8888:80
+    volumes:
+        - /www/tabroom:/www/tabroom:rw
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
