--- a/api/package.json
+++ b/api/package.json
@@ -61,6 +61,7 @@
 		"human-readable-ids": "^1.0.4",
 		"inotify": "github:c4milo/node-inotify",
 		"isomorphic-fetch": "^3.0.0",
+		"jsforce": "^1.11.1",
 		"jsonwebtoken": "^8.5.1",
 		"mariadb": "^2.5.2",
 		"node-fetch": "^3.3.1",
