--- a/api/package.json
+++ b/api/package.json
@@ -42,6 +42,7 @@
 		"@maxmind/geoip2-node": "^3.2.0",
 		"@speechanddebate/nsda-js-utils": "^1.0.14",
 		"argon2": "^0.28.2",
+		"axios": "^1.5.1",
 		"basic-auth": "^2.0.1",
 		"body-parser": "^1.18.3",
 		"bottleneck": "^2.19.0",
@@ -89,7 +90,9 @@
 		"node-mocks-http": "^1.10.1",
 		"nodemon": "^1.18.11",
 		"nyc": "^14.0.0",
-		"supertest": "^4.0.2"
+		"supertest": "^4.0.2",
+		"ts-node": "^10.9.1",
+		"typescript": "^5.2.0"
 	},
 	"jest": {
 		"transform": {},
