--- a/api/package.json
+++ b/api/package.json
@@ -40,6 +40,7 @@
 		"@alt3/sequelize-to-json-schemas": "^0.3.55",
 		"@aws-sdk/client-s3": "^3.397.0",
 		"@maxmind/geoip2-node": "^3.2.0",
+		"@onesignal/node-onesignal": "^2.0.1-beta2",
 		"@speechanddebate/nsda-js-utils": "^1.0.14",
 		"argon2": "^0.28.2",
 		"axios": "^1.5.1",
