--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
 version: '3'
 services:
   tabroom:
+    container_name: tabroom
     image: tabroom:latest
     restart: always
     ports:
         - 8888:80
     volumes:
-        - /www/tabroom:/www/tabroom:rw
+      - /www/tabroom/web/lib/Tab/General.pm:/www/tabroom/web/lib/Tab/General.pm:ro
     extra_hosts:
       - "host.docker.internal:host-gateway"
