Send mail via SMTP please

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,6 @@ services:
     ports:
         - 8888:80
     volumes:
-      - /www/tabroom/web/lib/Tab/General.pm:/www/tabroom/web/lib/Tab/General.pm:ro
+      - /www/tabroom/web:/www/tabroom/web:rw
     extra_hosts:
       - "host.docker.internal:host-gateway"
