--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -7,4 +7,4 @@ RUN npm i
 ENV NODE_ENV=production
 ENV PORT=3000
 ENV NODE_OPTIONS=--max_old_space_size=8000
-CMD NODE_OPTIONS=${NODE_OPTIONS} node --experimental-specifier-resolution=node --use_strict index.js
+CMD NODE_OPTIONS=${NODE_OPTIONS} node --experimental-specifier-resolution=node --use_strict app.js
