--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -7,6 +7,6 @@ services:
     ports:
         - 3000:3000
     volumes:
-      - /www/tabroom/api/config/config.js:/www/tabroom/api/config/config.js:ro
+      - /www/tabroom/api/config/config.js:/api/config/config.js:ro
     extra_hosts:
       - "host.docker.internal:host-gateway"
