--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
 	"main": "app.js",
 	"type": "module",
 	"scripts": {
-		"start": "NODE_ENV='production' NODE_OPTIONS='--max_old_space_size=8000 --experimental-specifier-resolution=node' node --use_strict app.js",
+		"start": "NODE_ENV='production' NODE_OPTIONS='--max_old_space_size=8000 --experimental-vm-modules --experimental-specifier-resolution=node' node --use-strict app.js",
 		"production": "NODE_ENV='production' NODE_OPTIONS='--max_old_space_size=8000' pm2 -i 16 start app.js --name indexcards --node-args='--experimental-specifier-resolution=node --use_strict' -e /var/log/indexcards/error.log",
 		"staging": "NODE_ENV='staging' NODE_OPTIONS='--max_old_space_size=1000' pm2 -i 4 start app.js --name indexcards --node-args='--experimental-specifier-resolution=node --use_strict' -o /var/log/indexcards/output.log -e /var/log/indexcards/error.log ",
 		"stagetest": "NODE_ENV='stagetest' nodemon --use-strict app.js",
