--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18.2.0 AS base
+FROM node:18.17.1 AS base
 WORKDIR /api
 COPY ./ ./
 
@@ -6,5 +6,5 @@ RUN npm i
 
 ENV NODE_ENV=production
 ENV PORT=3000
-ENV NODE_OPTIONS="--max_old_space_size=8000 --experimental-vm-modules"
-CMD NODE_OPTIONS=${NODE_OPTIONS} node --experimental-specifier-resolution=node --use_strict app.js
+ENV NODE_OPTIONS="--max_old_space_size=8000 --experimental-vm-modules --experimental-specifier-resolution=node"
+CMD NODE_OPTIONS=${NODE_OPTIONS} node --use_strict app.js
