Balancer proxy to the local nest

--- a/doc/docker/tabroom.com.conf
+++ b/doc/docker/tabroom.com.conf
@@ -23,6 +23,17 @@
 	DirectoryIndex index.mhtml index.html index.php
 	PerlRequire /www/tabroom/web/lib/handler.pl
 
+	<Proxy balancer://api>
+        BalancerMember "http://host.docker.internal:3001/v1" route=1
+        BalancerMember "http://host.docker.internal:3002/v1" route=1
+        BalancerMember "http://host.docker.internal:3003/v1" route=1
+        BalancerMember "http://host.docker.internal:3004/v1" route=1
+        ProxySet lbmethod=byrequests
+    </Proxy>
+
+	ProxyPass /v1 balancer://api
+	ProxyPassReverse /v1 balancer://api
+
 	Redirect /closet "https://www.tabroom.com/index/index.mhtml?closet=1"
 	Redirect /fabulous "https://www.tabroom.com/index/index.mhtml?fabulous=1"
 
@@ -34,7 +45,6 @@
 	<FilesMatch "\.mas$">
 		Require all denied
 	</FilesMatch>
-
 </VirtualHost>
 
 <Directory "/www/tabroom/web">
