Of all the blessed things, TZDATA?!

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
       id: get_version
       run: echo COMMIT_VERSION=$(echo $GITHUB_SHA) >> $GITHUB_ENV
 
-    - name: Publish Tabroom perl image to Registry
+    - name: Publish mason image to Registry
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
         name: nsda/tabroom
@@ -42,7 +42,7 @@ jobs:
         registry: registry.speechanddebate.org
         tags: "${{ env.COMMIT_VERSION }}"
         context: api
-    
+
     - name: If image was published change icon
       if: success()
       run: echo "SLACK_ICON=:white_check_mark:" >> $GITHUB_ENV
