--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -33,7 +33,7 @@ jobs:
       working-directory: ./client
 
     - name: Tests
-      run: npm run test-ci
+      run: npm run test
       working-directory: ./client
 
     - name: If tests passed change icon
