--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
+VITE_WEB_URL=http://local.tabroom.com:5173
 VITE_API_URL=http://local.tabroom.com/v1
 VITE_S3_BASE=https://s3.amazonaws.com/tabroom-files
