--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -10,14 +10,54 @@ on:
 
 env:
     CI: true
-    TZ: "America/Chicago"
+    TZ: 'America/Chicago'
     SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+    NODE_ENV: 'test'
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    services:
+      mariadb:
+        image: mariadb:10.11.2
+        ports:
+          - 3306
+        env:
+          MYSQL_USER: tabroom
+          MYSQL_PASSWORD: tabroom
+          MYSQL_DATABASE: tabroom
+          MYSQL_ROOT_PASSWORD:
+        options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
+
+
     steps:
     - uses: actions/checkout@v3
+
+    - name: Shutdown Ubuntu MySQL
+      run: sudo service mysql stop
+
+    - name: Verify MariaDB connection
+      env:
+        PORT: ${{ job.services.mariadb.ports[3306] }}
+      run: |
+        while ! mysqladmin ping -h"127.0.0.1" -P"$PORT" --silent; do
+          sleep 1
+        done          
+
+    - name: Load local database
+      env:
+        PORT: ${{ job.services.mariadb.ports[3306] }}
+      run: |
+        mysql -u tabroom -ptabroom tabroom < ./doc/init/tabroom-schema.sql"
+
+    # - name: Set up MariaDB
+    #   uses: getong/mariadb-action@v1.1
+    #   with:
+    #     mariadb version: '10.11.2'
+    #     mysql database: 'tabroom'
+    #     mysql user: 'tabroom'
+    #     mysql password: 'tabroom'
 
     - name: Get node
       uses: actions/setup-node@v1
@@ -36,9 +76,9 @@ jobs:
       run: npm run lint
       working-directory: ./api
 
-    #- name: Tests
-    #  run: npm run test
-    #  working-directory: ./api
+    - name: Tests
+      run: npm run test-ci
+      working-directory: ./api
 
     - name: If tests passed change icon
       if: success()
