--- a/api/config/config.js.sample
+++ b/api/config/config.js.sample
@@ -64,7 +64,7 @@ case 'test':
 	config.sequelizeOptions.logging = false;
 	config.DB_HOST = 'localhost';
 	config.DB_USER = 'tabroom';
-	config.DB_PASS = 'thisisadbpassword';
+	config.DB_PASS = 'tabroom';
 	break;
 
 case 'staging':
