--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      mariadb:
+      mariadb-test:
         image: mariadb:10.11.2
         ports:
           - 3306
@@ -49,7 +49,7 @@ jobs:
       env:
         PORT: ${{ job.services.mariadb.ports[3306] }}
       run: |
-        mysql -u tabroom -ptabroom tabroom < ./doc/init/tabroom-schema.sql"
+        mysql -h mariadb-test -u tabroom -ptabroom tabroom < ./doc/init/tabroom-schema.sql"
 
     # - name: Set up MariaDB
     #   uses: getong/mariadb-action@v1.1
