--- a/api/config/config.js.sample
+++ b/api/config/config.js.sample
@@ -62,7 +62,7 @@ const env = process.env.NODE_ENV || 'development';
 switch (env) {
 case 'test':
 	config.sequelizeOptions.logging = false;
-	config.DB_HOST = 'localhost';
+	config.DB_HOST = 'mariadb-test';
 	config.DB_USER = 'tabroom';
 	config.DB_PASS = 'tabroom';
 	break;
