--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -24,10 +24,10 @@ jobs:
         ports:
           - 3306
         env:
-          MYSQL_USER: tabroom
-          MYSQL_PASSWORD: tabroom
-          MYSQL_DATABASE: tabroom
-          MYSQL_ROOT_PASSWORD:
+          MARIADB_USER: tabroom
+          MARIADB_PASSWORD: tabroom
+          MARIADB_DATABASE: tabroom
+          MARIADB_ROOT_PASSWORD: tabroom
         options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
 
 
