--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -37,13 +37,13 @@ jobs:
     - name: Shutdown Ubuntu MySQL
       run: sudo service mysql stop
 
-    - name: Verify MariaDB connection
-      env:
-        PORT: ${{ job.services.mariadb.ports[3306] }}
-      run: |
-        while ! mysqladmin ping -h"127.0.0.1" -P"$PORT" --silent; do
-          sleep 1
-        done          
+    # - name: Verify MariaDB connection
+    #   env:
+    #     PORT: ${{ job.services.mariadb.ports[3306] }}
+    #   run: |
+    #     while ! mysqladmin ping -h"127.0.0.1" -P"$PORT" --silent; do
+    #       sleep 1
+    #     done          
 
     - name: Load local database
       env:
