--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -46,7 +46,7 @@ jobs:
     #     done          
 
     - name: Load local database
-      run: mysql -h mariadb-test -u tabroom -ptabroom tabroom < ./doc/init/tabroom-schema.sql
+      run: mysql -u tabroom -ptabroom tabroom < ./doc/init/tabroom-schema.sql
 
     # - name: Set up MariaDB
     #   uses: getong/mariadb-action@v1.1
