--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -22,7 +22,7 @@ jobs:
       mariadb-test:
         image: mariadb:10.11.2
         ports:
-          - 3306
+          - '3306:3306'
         env:
           MARIADB_USER: tabroom
           MARIADB_PASSWORD: tabroom
@@ -46,7 +46,7 @@ jobs:
     #     done          
 
     - name: Load local database
-      run: mysql -u tabroom -ptabroom tabroom < ./doc/init/tabroom-schema.sql
+      run: mysql -h 127.0.0.1 -P 3306 -u tabroom -ptabroom tabroom < ./doc/init/tabroom-schema.sql
 
     # - name: Set up MariaDB
     #   uses: getong/mariadb-action@v1.1
