--- a/api/package.json
+++ b/api/package.json
@@ -84,6 +84,7 @@
 		"chai": "^4.2.0",
 		"eslint": "^8.15.0",
 		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-jest": "^26.5.3",
 		"jest": "^29.0.1",
 		"mocha": "^9.1.3",
 		"nock": "^10.0.6",
