--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -3,6 +3,6 @@
     "module"          : "nodenext",
     "target"          : "es2022",
     "rootDir"         : "./indexcards",
-    "esModuleInterop" : true
+    "esModuleInterop" : true,
   }
 }
