--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -46,7 +46,7 @@ jobs:
     #     done          
 
     - name: Load local database
-      run: mysql -h 127.0.0.1 -P 3306 -u tabroom -ptabroom tabroom < ./api/tests/tabroom.sql
+      run: mysql -h 127.0.0.1 -P 3306 -u root -ptabroom tabroom < ./api/tests/tabroom.sql
 
     # - name: Set up MariaDB
     #   uses: getong/mariadb-action@v1.1
