--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,6 +43,16 @@ jobs:
         tags: "${{ env.COMMIT_VERSION }}"
         context: api
 
+    - name: Publish client image to Registry
+      uses: elgohr/Publish-Docker-Github-Action@master
+      with:
+        name: nsda/tabroom-client
+        username: ${{ secrets.REGISTRY_USERNAME }}
+        password: ${{ secrets.REGISTRY_PASSWORD }}
+        registry: registry.speechanddebate.org
+        tags: "${{ env.COMMIT_VERSION }}"
+        context: client
+
     - name: If image was published change icon
       if: success()
       run: echo "SLACK_ICON=:white_check_mark:" >> $GITHUB_ENV
