--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,9 @@
 {
-	"name": "svelte",
+	"name": "tabroom-client",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
+		"production": "NODE_ENV=production vite build && node -r dotenv/config build/index.js",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
@@ -13,6 +14,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.20.4",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
@@ -25,5 +27,8 @@
 		"vite": "^4.4.2",
 		"vitest": "^0.34.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"dotenv": "^16.3.1"
+	}
 }
