Start on authorize.net

--- a/api/package.json
+++ b/api/package.json
@@ -42,6 +42,7 @@
 		"@maxmind/geoip2-node": "^3.2.0",
 		"@speechanddebate/nsda-js-utils": "^1.0.14",
 		"argon2": "^0.28.2",
+		"authorizenet": "^1.0.8",
 		"axios": "^1.5.1",
 		"basic-auth": "^2.0.1",
 		"body-parser": "^1.18.3",
