--- a/client/package.json
+++ b/client/package.json
@@ -24,14 +24,14 @@
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2",
 		"vitest": "^0.34.0"
 	},
 	"type": "module",
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.4.2",
 		"tabulator-tables": "^5.5.2",
-		"dotenv": "^16.3.1"
+		"dotenv": "^16.3.1",
+		"typescript": "^5.0.0",
+		"vite": "^4.4.2"
 	}
 }
