--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,6 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.20.4",
 		"@types/tabulator-tables": "^5.5.4",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
@@ -23,15 +21,17 @@
 		"eslint-plugin-svelte": "^2.30.0",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
-		"tslib": "^2.4.1",
-		"vitest": "^0.34.0"
+		"tslib": "^2.4.1"
 	},
 	"type": "module",
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.4.2",
+		"@sveltejs/adapter-node": "^1.3.1",
+		"@sveltejs/kit": "^1.20.4",
 		"tabulator-tables": "^5.5.2",
 		"dotenv": "^16.3.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"vite": "^4.4.2",
+		"vitest": "^0.34.0"
 	}
 }
