Might fix the cross errors

--- a/client/nginx/client.conf
+++ b/client/nginx/client.conf
@@ -1,5 +1,5 @@
 upstream client {
-    server tabroom-client:3000;
+    server schemats:3000;
 }
 
 server {
@@ -7,8 +7,8 @@ server {
     listen [::]:80;
     server_name static.tabroom.com;
 
-    access_log /var/log/nginx/static-access.log json_logs;
-    error_log /var/log/nginx/static-error.log;
+    access_log /var/log/nginx/schemats-access.log json_logs;
+    error_log /var/log/nginx/schemats-error.log;
 
     proxy_set_header Host $host;
     proxy_connect_timeout 5s;
