--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,14 +24,14 @@ jobs:
       id: get_version
       run: echo COMMIT_VERSION=$(echo $GITHUB_SHA) >> $GITHUB_ENV
 
-    - name: Publish mason image to Registry
-      uses: elgohr/Publish-Docker-Github-Action@master
-      with:
-        name: nsda/tabroom
-        username: ${{ secrets.REGISTRY_USERNAME }}
-        password: ${{ secrets.REGISTRY_PASSWORD }}
-        registry: registry.speechanddebate.org
-        tags: "${{ env.COMMIT_VERSION }}"
+    # - name: Publish mason image to Registry
+    #  uses: elgohr/Publish-Docker-Github-Action@master
+    #  with:
+    #    name: nsda/tabroom
+    #    username: ${{ secrets.REGISTRY_USERNAME }}
+    #    password: ${{ secrets.REGISTRY_PASSWORD }}
+    #    registry: registry.speechanddebate.org
+    #    tags: "${{ env.COMMIT_VERSION }}"
 
     - name: Publish indexcards image to Registry
       uses: elgohr/Publish-Docker-Github-Action@master
@@ -43,10 +43,10 @@ jobs:
         tags: "${{ env.COMMIT_VERSION }}"
         context: api
 
-    - name: Publish client image to Registry
+    - name: Publish schemats image to Registry
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
-        name: nsda/tabroom-client
+        name: nsda/schemats
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
         registry: registry.speechanddebate.org
