--- a/api/package.json
+++ b/api/package.json
@@ -5,19 +5,20 @@
 	"main": "app.js",
 	"type": "module",
 	"scripts": {
-		"start": "NODE_ENV='production' NODE_OPTIONS='--max_old_space_size=150 --experimental-vm-modules --experimental-specifier-resolution=node' node --use-strict app.js",
-		"production": "NODE_ENV='production' NODE_OPTIONS='--max_old_space_size=8000' pm2 -i 16 start app.js --name indexcards --node-args='--experimental-specifier-resolution=node --use_strict' -e /var/log/indexcards/error.log",
-		"staging": "NODE_ENV='staging' NODE_OPTIONS='--max_old_space_size=1000' pm2 -i 4 start app.js --name indexcards --node-args='--experimental-specifier-resolution=node --use_strict' -o /var/log/indexcards/output.log -e /var/log/indexcards/error.log ",
-		"stagetest": "NODE_ENV='stagetest' nodemon --use-strict app.js",
-		"dev": "NODE_ENV='development' NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' nodemon --use-strict app.js",
-		"test": "NODE_ENV='test' NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' VITEST_SEGFAULT_RETRY=3 vitest watch",
-		"test-ci": "NODE_ENV='test' NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' VITEST_SEGFAULT_RETRY=3 vitest --run",
-		"cover": "NODE_ENV='test' NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' VITEST_SEGFAULT_RETRY=3 vitest --coverage",
-		"lint": "eslint --ignore-path ../.gitignore ."
+
+		"start"      : "NODE_ENV='production' NODE_OPTIONS='--max_old_space_size=150 --experimental-vm-modules --experimental-specifier-resolution=node' node --use-strict app.js",
+		"production" : "NODE_ENV='production' NODE_OPTIONS='--max_old_space_size=8000' pm2 -i 16 start app.js --name indexcards --node-args='--experimental-specifier-resolution=node --use_strict' -e /var/log/indexcards/error.log",
+		"staging"    : "NODE_ENV='staging' NODE_OPTIONS='--max_old_space_size=1000' pm2 -i 4 start app.js --name indexcards --node-args='--experimental-specifier-resolution=node --use_strict' -o /var/log/indexcards/output.log -e /var/log/indexcards/error.log ",
+		"stagetest"  : "NODE_ENV='stagetest' nodemon --use-strict app.js",
+		"dev"        : "NODE_ENV='development' NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' nodemon --use-strict app.js",
+		"test"       : "NODE_ENV='test' NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' VITEST_SEGFAULT_RETRY=3 vitest watch",
+		"test-ci"    : "NODE_ENV='test' NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' VITEST_SEGFAULT_RETRY=3 vitest --run",
+		"cover"      : "NODE_ENV='test' NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' VITEST_SEGFAULT_RETRY=3 vitest --coverage",
+		"lint"       : "eslint --ignore-path ../.gitignore ."
 	},
 	"repository": {
-		"type": "git",
-		"url": "git+https : //github.com/speechanddebate/tabroom.git"
+		"type" : "git",
+		"url"  : "git+https : //github.com/speechanddebate/tabroom.git"
 	},
 	"keywords": [
 		"speech",
@@ -25,6 +26,8 @@
 		"congress",
 		"tabulation",
 		"forensics",
+		"tabroom",
+		"speechanddebate",
 		"NSDA"
 	],
 	"author": "Chris Palmer",
@@ -37,65 +40,65 @@
 	},
 	"homepage": "https://www.tabroom.com/about",
 	"dependencies": {
-		"@alt3/sequelize-to-json-schemas": "^0.3.55",
-		"@aws-sdk/client-s3": "^3.397.0",
-		"@maxmind/geoip2-node": "^3.2.0",
-		"@speechanddebate/nsda-js-utils": "^1.0.14",
-		"argon2": "^0.28.2",
-		"authorizenet": "^1.0.8",
-		"axios": "^1.5.1",
-		"basic-auth": "^2.0.1",
-		"body-parser": "^1.18.3",
-		"bottleneck": "^2.19.0",
-		"cookie-parser": "^1.4.4",
-		"crypto-js": "^4.0.0",
-		"csv-stringify": "^5.3.0",
-		"dev": "^0.1.3",
-		"dotenv": "^8.2.0",
-		"express": "^4.17.1",
-		"express-openapi": "^4.6.1",
-		"express-rate-limit": "^3.4.1",
-		"express-winston": "^3.1.0",
-		"fs": "0.0.1-security",
-		"full-name-splitter": "^1.1.1",
-		"helmet": "^3.16.0",
-		"html-to-text": "^9.0.5",
-		"human-readable-ids": "^1.0.4",
-		"inotify": "github:c4milo/node-inotify",
-		"isomorphic-fetch": "^3.0.0",
-		"jsforce": "^1.11.1",
-		"jsonwebtoken": "^8.5.1",
-		"mariadb": "^2.5.2",
-		"node-fetch": "^3.3.1",
-		"nodemailer": "^6.9.1",
-		"papaparse": "^5.1.0",
-		"sequelize": "^6.21.4",
-		"sha512crypt-node": "^1.0.2",
-		"shacrypt": "^0.1.3",
-		"sql-template-strings": "^2.2.2",
-		"swagger-ui-express": "^4.1.6",
-		"ua-parser-js": "^0.7.28",
-		"uuid": "^3.3.2",
-		"winston": "^3.2.1",
-		"xml2js": "^0.4.19"
+		"@alt3/sequelize-to-json-schemas" : "^0.3.55",
+		"@aws-sdk/client-s3"              : "^3.397.0",
+		"@maxmind/geoip2-node"            : "^3.2.0",
+		"@speechanddebate/nsda-js-utils"  : "^1.0.14",
+		"argon2"                          : "^0.28.2",
+		"authorizenet"                    : "^1.0.8",
+		"axios"                           : "^1.5.1",
+		"basic-auth"                      : "^2.0.1",
+		"body-parser"                     : "^1.18.3",
+		"bottleneck"                      : "^2.19.0",
+		"cookie-parser"                   : "^1.4.4",
+		"crypto-js"                       : "^4.0.0",
+		"csv-stringify"                   : "^5.3.0",
+		"dev"                             : "^0.1.3",
+		"dotenv"                          : "^8.2.0",
+		"express"                         : "^4.17.1",
+		"express-openapi"                 : "^4.6.1",
+		"express-rate-limit"              : "^3.4.1",
+		"express-winston"                 : "^3.1.0",
+		"fs"                              : "0.0.1-security",
+		"full-name-splitter"              : "^1.1.1",
+		"helmet"                          : "^3.16.0",
+		"html-to-text"                    : "^9.0.5",
+		"human-readable-ids"              : "^1.0.4",
+		"inotify"                         : "github:c4milo/node-inotify",
+		"isomorphic-fetch"                : "^3.0.0",
+		"jsforce"                         : "^1.11.1",
+		"jsonwebtoken"                    : "^8.5.1",
+		"mariadb"                         : "^2.5.2",
+		"node-fetch"                      : "^3.3.1",
+		"nodemailer"                      : "^6.9.1",
+		"papaparse"                       : "^5.1.0",
+		"sequelize"                       : "^6.21.4",
+		"sha512crypt-node"                : "^1.0.2",
+		"shacrypt"                        : "^0.1.3",
+		"sql-template-strings"            : "^2.2.2",
+		"swagger-ui-express"              : "^4.1.6",
+		"ua-parser-js"                    : "^0.7.28",
+		"uuid"                            : "^3.3.2",
+		"winston"                         : "^3.2.1",
+		"xml2js"                          : "^0.4.19"
 	},
 	"devDependencies": {
-		"@speechanddebate/eslint-config-nsda": "^1.0.20",
-		"@vitest/coverage-v8": "^0.34.6",
-		"chai": "^4.2.0",
-		"eslint": "^8.15.0",
-		"eslint-plugin-import": "^2.25.2",
-		"eslint-plugin-jest": "^26.5.3",
-		"jest": "^29.0.1",
-		"mocha": "^9.1.3",
-		"nock": "^10.0.6",
-		"node-mocks-http": "^1.10.1",
-		"nodemon": "^1.18.11",
-		"nyc": "^14.0.0",
-		"supertest": "^4.0.2",
-		"ts-node": "^10.9.1",
-		"typescript": "^5.2.0",
-		"vitest": "^0.34.6"
+		"@speechanddebate/eslint-config-nsda" : "^1.0.20",
+		"@vitest/coverage-v8"                 : "^0.34.6",
+		"chai"                                : "^4.2.0",
+		"eslint"                              : "^8.15.0",
+		"eslint-plugin-import"                : "^2.25.2",
+		"eslint-plugin-jest"                  : "^26.5.3",
+		"jest"                                : "^29.0.1",
+		"mocha"                               : "^9.1.3",
+		"nock"                                : "^10.0.6",
+		"node-mocks-http"                     : "^1.10.1",
+		"nodemon"                             : "^1.18.11",
+		"nyc"                                 : "^14.0.0",
+		"supertest"                           : "^4.0.2",
+		"ts-node"                             : "^10.9.1",
+		"typescript"                          : "^5.2.0",
+		"vitest"                              : "^0.34.6"
 	},
 	"eslintConfig": {
 		"extends": [
