Docker separate staging and prod; will not work yet.  Merge improvement.  Svelte config also not yet.  Speedh omprvemenets to the schematics.  MT byes.  Paradigm review screen stub

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,10 @@ services:
         - 80:80
     volumes:
       - /www/tabroom/web:/www/tabroom/web:rw
+      - /www/profiles:/www/profiles
+      - /etc/apache2/envvars:/etc/apache2/ennvars
+      - /etc/apache2/sites-enabled/tabroom.com.conf:/etc/apache2/sites-enabled/tabroom.com.conf
+      - /etc/apache2/mods-enabled/perl.conf:/etc/apache2/mods-enabled/perl.conf
+      - /etc/apache2/mods-enabled/mpm_prefork.conf:/etc/apache2/mods-enabled/mpm_prefork.conf
     extra_hosts:
       - "host.docker.internal:host-gateway"
